--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,4 +31,20 @@
         "ylen",
         "zlen"
     ],
+    "files.associations": {
+        "*.desktop": "ini",
+        "vimrc": "viml",
+        "zshrc": "shellscript",
+        ".zpreztorc": "shellscript",
+        "zpreztorc": "shellscript",
+        "asv.conf.json": "jsonc",
+        "*.tags": "lua",
+        "*.tikz": "context",
+        "*.lmtx": "context",
+        ".prettierrc": "jsonc",
+        "*.yaml": "jinja-yaml",
+        "*.j2": "jinja-md",
+        "cmath": "cpp",
+        "cstddef": "cpp"
+    },
 }
